@@ -1,0 +1,25 @@
+<?xml version="1.0" ?>
+<cubes xmlns="urn:x-iris:cubeml-0.2">
+  <cube long_name="thingness" units="1">
+    <attributes>
+      <attribute name="history" value="Sum of thingness over bar"/>
+    </attributes>
+    <coords>
+      <coord>
+        <dimCoord bounds="[[0, 15]]" id="7c9a33bf" long_name="bar" points="[7.5]" shape="(1,)" units="Unit('1')" value_type="float64"/>
+      </coord>
+      <coord datadims="[0]">
+        <dimCoord bounds="[[-15, 0],
+		[0, 15],
+		[15, 30],
+		[30, 45]]" id="549be28b" long_name="foo" points="[-7.5, 7.5, 22.5, 37.5]" shape="(4,)" units="Unit('1')" value_type="float64"/>
+      </coord>
+    </coords>
+    <cellMethods>
+      <cellMethod method="sum">
+        <coord name="bar"/>
+      </cellMethod>
+    </cellMethods>
+    <data byteorder="little" dtype="float64" order="C" shape="(4,)" state="loaded"/>
+  </cube>
+</cubes>
